# pitch_from_vanish_point

CppPractive/: jsoncpp.cpp  main.cpp  utils.cpp  utils.h
CppPractive.xcodeproj/: project.pbxproj
CppPractive.xcodeproj/xcshareddata/xcschemes/: CppPractice.xcscheme
CppPractive/FaceMesh/: CMakeLists.txt  README.md  calculator_base.cc  calculator_base.h  calculator_contract.cc  image.cc  image_format.pb.h  image_frame.cc  image_frame.h  image_to_tensor_calculator.cpp  image_to_tensor_calculator.hpp  image_to_tensor_utils.cc  logging.h  main.cpp  proto_ns.h  ret_check.cc  ret_check.h  status.h  status_builder.cc  status_builder.h  tensor.cc  tensor.h  type_map.h  type_util.h  validate_name.cc
CppPractive/PlayWithTFlite/: ssd_anchors_calculator.cc  ssd_anchors_calculator.proto  tflite_tensors_to_detections_calculator.cc  tflite_tensors_to_detections_calculator.proto  transpose_conv_bias.cc  transpose_conv_bias.h
CppPractive/exiftag/: demo_exif.cpp  demo_exif.hpp  exif.hpp
CppPractive/findPitch/: dataset.cpp  dataset.hpp  pitch_btw_imgs.cpp  pitch_btw_imgs.hpp
CppPractive/main.dSYM/Contents/Resources/DWARF/: main
CppPractive/opticalFlow/: Image.cpp  Image.hpp  LensParameter.cpp  LensParameter.hpp  dense_opt_flow.cpp  dense_opt_flow.hpp  example_optical_flow.cpp  example_optical_flow.hpp  sparse_opt_flow.cpp  sparse_opt_flow.hpp
CppPractive/vanishPt/: VPDetection.cpp  VPDetection.hpp  line_detect.cpp  line_detect.hpp  lsd.cpp  lsd.hpp  vanishing_point.cpp  vanishing_point.hpp
CppPractive/wls/: example_RoG.cpp  example_RoG.hpp  wls_filter.cpp  wls_filter.hpp
(+3 files in other folders)
